Added links to images

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ img: assets/images/accueil.jpg
             <div class="row">
 
                 <div class="col-sm">
-                    <button type="button" class="btn btn-default" href="{{ 'people/walker.html' | relative_url }}">
+                    <a href="{{ 'people/walker.html' | relative_url }}" class="btn btn-default">
                         <img src="/assets/images/cabinet_walker.jpg" />
-                    </button>
+                    </a>
                 </div>
 
                 <div class="col-sm">
@@ -31,9 +31,9 @@ img: assets/images/accueil.jpg
             <div class="row">
 
                 <div class="col-sm">
-                    <button type="button" class="btn btn-default" href="{{ 'people/waeber.html' | relative_url }}">
+                    <a href="{{ 'people/waeber.html' | relative_url }}" class="btn btn-default">
                         <img src="/assets/images/cabinet_waeber2.jpg" />
-                    </button>
+                    </a>
                 </div>
 
                 <div class="col-sm">
@@ -52,9 +52,9 @@ img: assets/images/accueil.jpg
             <div class="row">
 
                 <div class="col-sm">
-                    <button type="button" class="btn btn-default" href="{{ 'people/poulsen.html' | relative_url }}">
+                    <a href="{{ 'people/mayoly.html' | relative_url }}" class="btn btn-default">
                         <img src="/assets/images/cabinet_mayoly.jpg" />
-                    </button>
+                    </a>
                 </div>
 
                 <div class="col-sm">
@@ -70,9 +70,9 @@ img: assets/images/accueil.jpg
             <div class="row">
 
                 <div class="col-sm">
-                    <button type="button" class="btn btn-default" href="{{ 'people/poulsen.html' | relative_url }}">
+                    <a href="{{ 'people/poulsen.html' | relative_url }}" class="btn btn-default">
                         <img src="/assets/images/cabinet_poulsen.jpg" />
-                    </button>
+                    </a>
                 </div>
 
                 <div class="col-sm">
