Added more information next to home page images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ img: assets/images/accueil.jpg
                 </div>
 
                 <div class="col-sm">
-                    Dr Jean-Pierre Walker
+                    Dr Jean-Pierre Walker<br>
+                    Psychiatre – Psychologue<br>
+                    076 635 10 75<br>
                 </div>
 
             </div>
@@ -37,7 +39,11 @@ img: assets/images/accueil.jpg
                 </div>
 
                 <div class="col-sm">
-                    Anne Waeber
+                    Anne Waeber<br>
+                    Ostéopathe CDS<br>
+                    Reconnaissance fédérale<br>
+                    032 841 50 79<br>
+                    annewaeber@osteopathe-neuchatel.ch<br>
                 </div>
 
             </div>
@@ -58,7 +64,11 @@ img: assets/images/accueil.jpg
                 </div>
 
                 <div class="col-sm">
-                    Anne Mayoly-Boon
+                    Anne Mayoly-Boon<br>
+                    Ostéopathe CDS<br>
+                    Reconnaissance fédérale<br>
+                    079 435 32 61<br>
+                    osteo_mayoly@bluewin.ch<br>
                 </div>
 
             </div>
@@ -77,6 +87,10 @@ img: assets/images/accueil.jpg
 
                 <div class="col-sm">
                     Anne-Line Poulsen<br>
+                    Physiothérapeute HES<br>
+                    Instructeur Tai Chi For Health<br>
+                    079 268 72 42<br>
+                    annelinepoulsen@gmail.com<br>
                 </div>
 
             </div>
