Changed homepage images

--- a/index.html
+++ b/index.html
@@ -9,58 +9,64 @@ img: assets/images/accueil.jpg
 
     <div class="row align-items-center">
 
-        <div class="col-lg-3 pt-4">
-            <a href="{{ 'people/walker.html' | relative_url }}" class="btn p-0">
-                <img src="/assets/images/cabinet_walker.jpg" class="rounded" />
-            </a>
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="{{ 'people/walker.html' | relative_url }}" class="btn p-0">
+                    <img src="/assets/images/cabinet_walker_home.jpeg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Dr Jean-Pierre Walker<br>
+                Psychiatre – Psychologue<br>
+                076 635 10 75<br>
+                <br>
+                <br>
+            </div>
         </div>
 
-        <div class="col-lg-3">
-            Dr Jean-Pierre Walker<br>
-            Psychiatre – Psychologue<br>
-            076 635 10 75<br>
-        </div>
-
-        <div class="col-lg-3 pt-4">
-            <a href="{{ 'people/waeber.html' | relative_url }}" class="btn p-0">
-                <img src="/assets/images/cabinet_waeber2.jpg" class="rounded" />
-            </a>
-        </div>
-
-        <div class="col-lg-3">
-            Anne Waeber<br>
-            Ostéopathe CDS<br>
-            Reconnaissance fédérale<br>
-            032 841 50 79<br>
-            annewaeber@osteopathe-neuchatel.ch<br>
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="{{ 'people/waeber.html' | relative_url }}" class="btn p-0">
+                    <img src="/assets/images/cabinet_waeber_home.jpeg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Anne Waeber<br>
+                Ostéopathe CDS<br>
+                Reconnaissance fédérale<br>
+                032 841 50 79<br>
+                <a href="mailto:annewaeber@osteopathe-neuchatel.ch">annewaeber@osteopathe-neuchatel.ch</a><br>
+            </div>
         </div>
         
-        <div class="col-lg-3 pt-4">
-            <a href="{{ 'people/mayoly.html' | relative_url }}" class="btn p-0">
-                <img src="/assets/images/cabinet_mayoly.jpg" class="rounded" />
-            </a>
-        </div>
-
-        <div class="col-lg-3">
-            Anne Mayoly-Boon<br>
-            Ostéopathe CDS<br>
-            Reconnaissance fédérale<br>
-            079 435 32 61<br>
-            osteo_mayoly@bluewin.ch<br>
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="{{ 'people/mayoly.html' | relative_url }}" class="btn p-0">
+                    <img src="/assets/images/cabinet_mayoly_home.jpeg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Anne Mayoly-Boon<br>
+                Ostéopathe CDS<br>
+                Reconnaissance fédérale<br>
+                079 435 32 61<br>
+                <a href="mailto:osteo_mayoly@bluewin.ch">osteo_mayoly@bluewin.ch</a><br>
+            </div>
         </div>
         
-        <div class="col-lg-3 pt-4">
-            <a href="{{ 'people/poulsen.html' | relative_url }}" class="btn p-0">
-                <img src="/assets/images/cabinet_poulsen.jpg" class="rounded" />
-            </a>
-        </div>
-
-        <div class="col-lg-3">
-            Anne-Line Poulsen<br>
-            Physiothérapeute HES<br>
-            Instructeur Tai Chi For Health<br>
-            079 268 72 42<br>
-            annelinepoulsen@gmail.com<br>
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="{{ 'people/poulsen.html' | relative_url }}" class="btn p-0">
+                    <img src="/assets/images/cabinet_poulsen_home.jpeg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Anne-Line Poulsen<br>
+                Physiothérapeute HES<br>
+                Instructeur Tai Chi For Health<br>
+                079 268 72 42<br>
+                <a href="mailto:annelinepoulsen@gmail.com">annelinepoulsen@gmail.com</a><br>
+            </div>
         </div>
 
     </div>
