--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: title_page
-title: Psychiatrie – Psychothérapie<br>Ostéopathie<br>Physiothérapie<br>Tai Chi For Health
+title: Ostéopathie<br>Physiothérapie<br>Tai Chi For Health
 address: Rue du Trésor 9 – 3ème étage - 2000 Neuchâtel
 img: assets/images/accueil.jpg
 ---
