--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: title_page
-title: Ostéopathie <br>Physiothérapie <br>Tai Chi For Health 
+title: Ostéopathie <br>Physiothérapie <br>Tai Chi For Health <br>Naturopathie
 address: Rue du Trésor 9 – 3ème étage - 2000 Neuchâtel
 img: assets/images/accueil.jpg
 ---
@@ -21,21 +21,6 @@ img: assets/images/accueil.jpg
                 Reconnaissance fédérale<br>
                 032 841 50 79<br>
                 <a href="mailto:annewaeber@osteopathe-neuchatel.ch">annewaeber@osteopathe-neuchatel.ch</a><br>
-            </div>
-        </div>
-        
-        <div class="col-lg-6">
-            <div class="home-image">
-                <a href="{{ 'people/mayoly.html' | relative_url }}" class="btn p-0">
-                    <img src="/assets/images/cabinet_mayoly_home.jpeg" class="rounded" />
-                </a>
-            </div>
-            <div class="home-contact">
-                Anne Mayoly-Boon<br>
-                Ostéopathe CDS<br>
-                Reconnaissance fédérale<br>
-                079 435 32 61<br>
-                <a href="mailto:osteo_mayoly@bluewin.ch">osteo_mayoly@bluewin.ch</a><br>
             </div>
         </div>
         
