--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 layout: title_page
 title: Ostéopathie <br>Physiothérapie <br>Tai Chi For Health <br>Naturopathie
 address: Rue du Trésor 9 – 3ème étage - 2000 Neuchâtel
-img: assets/images/accueil.jpg
+img: assets/images/vue_poulsen.jpg
 ---
     
 <div class="container">
 
-    <div class="row align-items-center">
+    <div class="row align-items-top">
 
         <div class="col-lg-6">
             <div class="home-image">
@@ -39,6 +39,39 @@ img: assets/images/accueil.jpg
             </div>
         </div>
 
-    </div>
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="https://www.therapies-naturelles-et-complementaires.ch" class="btn p-0">
+                    <img src="/assets/images/cabinet_baumann_home.jpg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Annabelle Baumann<br>
+                Naturopathe diplômée en médecine complémentaire occidentale (MCO)<br>
+                Certificate of Advanced Studies (CAS) en Art et techniques hypnotiques, dans le domaine de la santé et du travail social<br>
+                +41 (0)76 542 40 48<br>
+                <a href="mailto:annabelle.baumann@outlook.com">annabelle.baumann@outlook.com</a><br>
+                <a href="https://www.therapies-naturelles-et-complementaires.ch">therapies-naturelles-et-complementaires.ch</a><br>
+            </div>
+        </div>
         
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="https://www.pauline-osteo.ch/" class="btn p-0">
+                    <img src="/assets/images/cabinet_pauline_home.jpg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Pauline Robert-Charrue<br>
+                Ostéopathe CDS-GDK<br>
+                Membre FSO<br>
+                Fleurs de Bach<br>
+                Theta-healer<br>
+                Yolates Instructor<br>
+                076 240 53 63<br>
+                <a href="https://www.pauline-osteo.ch/">pauline-osteo.ch</a><br>
+            </div>
+        </div>
+    </div>
+
 </div>
