--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img: assets/images/vue_poulsen.jpg
         <div class="col-lg-6">
             <div class="home-image">
                 <a href="{{ 'people/poulsen.html' | relative_url }}" class="btn p-0">
-                    <img src="/assets/images/cabinet_poulsen_home.jpeg" class="rounded" />
+                    <img src="/assets/images/cabinet_poulsen_3_home.jpg" class="rounded" />
                 </a>
             </div>
             <div class="home-contact">
