Open link in new tab

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ img: assets/images/vue_poulsen.jpg
 
         <div class="col-lg-6">
             <div class="home-image">
-                <a href="https://www.therapies-naturelles-et-complementaires.ch" class="btn p-0">
-                    <img src="/assets/images/cabinet_baumann_home.jpg" class="rounded" />
+                <a href="https://www.therapies-naturelles-et-complementaires.ch" class="btn p-0" target="_blank">
+                    <img src="/assets/images/cathedrale_2_home.jpg" class="rounded" />
                 </a>
             </div>
             <div class="home-contact">
@@ -51,13 +51,13 @@ img: assets/images/vue_poulsen.jpg
                 Certificate of Advanced Studies (CAS) en Art et techniques hypnotiques, dans le domaine de la santé et du travail social<br>
                 +41 (0)76 542 40 48<br>
                 <a href="mailto:annabelle.baumann@outlook.com">annabelle.baumann@outlook.com</a><br>
-                <a href="https://www.therapies-naturelles-et-complementaires.ch">therapies-naturelles-et-complementaires.ch</a><br>
+                <a href="https://www.therapies-naturelles-et-complementaires.ch" target="_blank">therapies-naturelles-et-complementaires.ch</a><br>
             </div>
         </div>
         
         <div class="col-lg-6">
             <div class="home-image">
-                <a href="https://www.pauline-osteo.ch/" class="btn p-0">
+                <a href="https://www.pauline-osteo.ch/" class="btn p-0" target="_blank">
                     <img src="/assets/images/cabinet_pauline_home.jpg" class="rounded" />
                 </a>
             </div>
@@ -69,7 +69,7 @@ img: assets/images/vue_poulsen.jpg
                 Theta-healer<br>
                 Yolates Instructor<br>
                 076 240 53 63<br>
-                <a href="https://www.pauline-osteo.ch/">pauline-osteo.ch</a><br>
+                <a href="https://www.pauline-osteo.ch/" target="_blank">pauline-osteo.ch</a><br>
             </div>
         </div>
     </div>
