updated website content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ img: assets/images/vue_poulsen.jpg
         <div class="col-lg-6">
             <div class="home-image">
                 <a href="https://www.therapies-naturelles-et-complementaires.ch" class="btn p-0" target="_blank">
-                    <img src="/assets/images/cathedrale_2_home.jpg" class="rounded" />
+                    <img src="/assets/images/cabinet_annabelle_2_home.jpeg" class="rounded" />
                 </a>
             </div>
             <div class="home-contact">
