--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ img: assets/images/vue_poulsen.jpg
                 Instructeur Tai Chi For Health<br>
                 079 268 72 42<br>
                 <a href="mailto:annelinepoulsen@gmail.com">annelinepoulsen@gmail.com</a><br>
+                <a href="mailto:alpoulsen@physio-hin.ch">alpoulsen@physio-hin.ch</a><br>
             </div>
         </div>
 
