Updated Poulsen Page. Deleted Waeber Page.

--- a/index.html
+++ b/index.html
@@ -11,21 +11,6 @@ img: assets/images/vue_poulsen.jpg
 
         <div class="col-lg-6">
             <div class="home-image">
-                <a href="{{ 'people/waeber.html' | relative_url }}" class="btn p-0">
-                    <img src="/assets/images/cabinet_waeber_home.jpeg" class="rounded" />
-                </a>
-            </div>
-            <div class="home-contact">
-                Anne Waeber<br>
-                Ostéopathe CDS<br>
-                Reconnaissance fédérale<br>
-                032 841 50 79<br>
-                <a href="mailto:annewaeber@osteopathe-neuchatel.ch">annewaeber@osteopathe-neuchatel.ch</a><br>
-            </div>
-        </div>
-        
-        <div class="col-lg-6">
-            <div class="home-image">
                 <a href="{{ 'people/poulsen.html' | relative_url }}" class="btn p-0">
                     <img src="/assets/images/cabinet_poulsen_3_home.jpg" class="rounded" />
                 </a>
@@ -37,6 +22,22 @@ img: assets/images/vue_poulsen.jpg
                 079 268 72 42<br>
                 <a href="mailto:annelinepoulsen@gmail.com">annelinepoulsen@gmail.com</a><br>
                 <a href="mailto:alpoulsen@physio-hin.ch">alpoulsen@physio-hin.ch</a><br>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="https://www.osteopathe-neuchatel.ch/" class="btn p-0">
+                    <img src="/assets/images/cabinet_waeber_home.jpeg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Anne Waeber<br>
+                Ostéopathe CDS<br>
+                Reconnaissance fédérale<br>
+                032 841 50 79<br>
+                <a href="mailto:annewaeber@osteopathe-neuchatel.ch">annewaeber@osteopathe-neuchatel.ch</a><br>
+                <a href="https://www.osteopathe-neuchatel.ch/" target="_blank">osteopathe-neuchatel.ch</a><br>
             </div>
         </div>
 
