updated people on website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: title_page
-title: Ostéopathie <br>Physiothérapie <br>Tai Chi For Health <br>Naturopathie
+title: Ostéopathie <br>Physiothérapie <br>Tai Chi For Health <br>Naturopathie <br>Massothérapie
 address: Rue du Trésor 9 – 3ème étage - 2000 Neuchâtel
 img: assets/images/vue_poulsen.jpg
 ---
-    
+
 <div class="container">
 
     <div class="row align-items-top">
@@ -59,19 +59,17 @@ img: assets/images/vue_poulsen.jpg
         
         <div class="col-lg-6">
             <div class="home-image">
-                <a href="https://www.pauline-osteo.ch/" class="btn p-0" target="_blank">
-                    <img src="/assets/images/cabinet_pauline_home.jpg" class="rounded" />
+                <a href="https://massotherapie-neuchatel.ch/" class="btn p-0" target="_blank">
+                    <img src="/assets/images/cabinet_pedro_home.jpg" class="rounded" />
                 </a>
             </div>
             <div class="home-contact">
-                Pauline Robert-Charrue<br>
-                Ostéopathe CDS-GDK<br>
-                Membre FSO<br>
-                Fleurs de Bach<br>
-                Theta-healer<br>
-                Yolates Instructor<br>
-                076 240 53 63<br>
-                <a href="https://www.pauline-osteo.ch/" target="_blank">pauline-osteo.ch</a><br>
+                Pedro Gaspar<br>
+                Massothérapeute & Reflexologue<br>
+                Spécialisation en Massage Sportif et Reboutement<br>
+                079 191 84 96<br>
+                <a href="mailto:pedro@massotherapie-neuchatel.ch">pedro@massotherapie-neuchatel.ch</a><br>
+                <a href="https://massotherapie-neuchatel.ch/" target="_blank">massotherapie-neuchatel.ch</a><br>
             </div>
         </div>
     </div>
