--- a/index.html
+++ b/index.html
@@ -72,6 +72,20 @@ img: assets/images/vue_poulsen.jpg
                 <a href="https://massotherapie-neuchatel.ch/" target="_blank">massotherapie-neuchatel.ch</a><br>
             </div>
         </div>
+
+        <div class="col-lg-6">
+            <div class="home-image">
+                <a href="https://www.physioneuchatel.ch" class="btn p-0">
+                    <img src="/assets/images/cabinet_poulsen_3_home.jpg" class="rounded" />
+                </a>
+            </div>
+            <div class="home-contact">
+                Valeria Mandru<br>
+                Physiothérapeute<br>
+                076 722 01 95<br>
+                <a href="mailto:physioneuchatel.ch@gmail.com">physioneuchatel.ch@gmail.com</a><br>
+            </div>
+        </div>
     </div>
 
 </div>
