added website link

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ img: assets/images/vue_poulsen.jpg
                 Physiothérapeute<br>
                 076 722 01 95<br>
                 <a href="mailto:physioneuchatel.ch@gmail.com">physioneuchatel.ch@gmail.com</a><br>
+                <a href="https://www.physioneuchatel.ch" target="_blank">physioneuchatel.ch</a><br>
             </div>
         </div>
     </div>
